// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ContentSidebar/ActivityFeed/keywords/Keywords should correctly render info icon 1`] = `
<span
  className="bcs-keywords-actions"
>
  <Tooltip
    className="bcs-keywords-actions-tooltip"
    constrainToScrollParent={false}
    constrainToWindow={true}
    position="bottom-left"
    text={
      <FormattedMessage
        defaultMessage="Keywords: {words}"
        id="be.keywordsList"
        values={
          Object {
            "words": "cartoon font logo",
          }
        }
      />
    }
    theme="default"
  >
    <div
      className="bcs-keywords-info"
    >
      <IconInfoInverted
        height={16}
        width={16}
      />
    </div>
  </Tooltip>
</span>
`;

exports[`components/ContentSidebar/ActivityFeed/keywords/Keywords should correctly render keywords 1`] = `
<div
  className="bcs-keywords"
>
  <span
    className="bcs-keywords-message"
  >
    <FormattedMessage
      defaultMessage="Keywords were applied"
      id="be.keywordsAppliedList"
    />
  </span>
  <Info
    words="cartoon font logo brand clip art illustration line artwork"
  />
</div>
`;

exports[`components/ContentSidebar/ActivityFeed/keywords/Keywords should not render info icon if words are not passed 1`] = `
<div
  className="bcs-keywords"
>
  <span
    className="bcs-keywords-message"
  >
    <FormattedMessage
      defaultMessage="Keywords were applied"
      id="be.keywordsAppliedList"
    />
  </span>
</div>
`;
